--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>GoIT Frontend Course</title>
 </head>
 <body>
-<a href="/html-css/module-02/">Module 02</a> 
+<a href="https://jz2509.github.io/goit-fe-course/html-css/module-02/">Module 02</a> 
 </body>
 </html>
