--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
 <a href="https://jz2509.github.io/goit-fe-course/html-css/module-02/">Module 02</a> 
+<a href="https://jz2509.github.io/goit-fe-course/html-css/module-03/">Module 03</a>
 </body>
 </html>
