fixes per comments

--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="navigation">
-      <a href="#lifestyle" class="active">lifestyle</a>
+      <a href="#lifestyle">lifestyle</a>
       <a href="#photodiary">photodiary</a>
       <a href="#music">music</a>
       <a href="#travel">travel</a>
@@ -153,7 +153,7 @@
             magnam aliquam quaerat voluptatem.
           </p>
       </article>
-      <div class="all"><button>Load more</button></div>
+      <div class="all"><button class="btn-load">Load more</button></div>
     </main>
  
   </body>
