--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header">
       <div class="logo">
-        <a href="/html-css/module-04/index.html">Mart</a>
+        <a href=".">Mart</a>
       </div>
       <nav class="navigation">
         <a href="#home">Home</a>
