--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <a href="https://jz2509.github.io/goit-fe-course/html-css/module-02/">Module 02</a> 
 <a href="https://jz2509.github.io/goit-fe-course/html-css/module-03/">Module 03</a>
 <a href="https://jz2509.github.io/goit-fe-course/html-css/module-04/">Module 04</a>
+<a href="https://jz2509.github.io/goit-fe-course/html-css/module-05/">Module 05</a>
 </body>
 </html>
