--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -27,7 +27,7 @@
           <div class="slides-item">
             <img
               class="slide-image"
-              src="/html-css/module-05/img/slide1.jpg"
+              src="./img/slide1.jpg"
               alt=""
             />
             <span class="background"></span>
