--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>GoIT Frontend Course</title>
-</head>
-<body>
-<a href="https://jz2509.github.io/goit-fe-course/html-css/module-02/">Module 02</a> 
-<a href="https://jz2509.github.io/goit-fe-course/html-css/module-03/">Module 03</a>
-<a href="https://jz2509.github.io/goit-fe-course/html-css/module-04/">Module 04</a>
-<a href="https://jz2509.github.io/goit-fe-course/html-css/module-05/">Module 05</a>
-</body>
+  </head>
+  <body>
+    <div class="modules" style="margin: 25px;">
+      <a
+        style="color: black; text-decoration: none; border: 1px solid black; border-radius: 8px; padding: 10px; margin: 25px;"
+        href="https://jz2509.github.io/goit-fe-course/html-css/module-02/"
+        >Module 02</a
+      >
+      <a
+        style="color: black; text-decoration: none; border: 1px solid black; border-radius: 8px; padding: 10px; margin: 25px;"
+        href="https://jz2509.github.io/goit-fe-course/html-css/module-03/"
+        >Module 03</a
+      >
+      <a
+        style="color: black; text-decoration: none; border: 1px solid black; border-radius: 8px; padding: 10px; margin: 25px;"
+        href="https://jz2509.github.io/goit-fe-course/html-css/module-04/"
+        >Module 04</a
+      >
+      <a
+        style="color: black; text-decoration: none; border: 1px solid black; border-radius: 8px; padding: 10px; margin: 25px;"
+        href="https://jz2509.github.io/goit-fe-course/html-css/module-05/"
+        >Module 05</a
+      >
+      <a
+        style="color: black; text-decoration: none; border: 1px solid black; border-radius: 8px; padding: 10px; margin: 25px;"
+        href="https://jz2509.github.io/goit-fe-course/html-css/module-06/"
+        >Module 06</a
+      >
+    </div>
+  </body>
 </html>
