module-07 initial commit

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         href="https://jz2509.github.io/goit-fe-course/html-css/module-06/"
         >Module 06</a
       >
+      <a
+      style="color: black; text-decoration: none; border: 1px solid black; border-radius: 8px; padding: 10px; margin: 25px;"
+      href="https://jz2509.github.io/goit-fe-course/html-css/module-07/"
+      >Module 07</a
+    >
     </div>
   </body>
 </html>
