--- a/html-css/module-07/index.html
+++ b/html-css/module-07/index.html
@@ -66,7 +66,7 @@
     </main>
     <footer>
       <!-- contact form -->
-      <form class="form container">
+      <form method="POST" class="form container">
         <h2>Contact us</h2>
         <h3>Proin iaculis purus consequat sem cure.</h3>
         <div class="form-left">
