--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
       href="https://jz2509.github.io/goit-fe-course/html-css/module-09/"
       >Module 09</a
     >
+    <a
+      style="color: black; text-decoration: none; border: 1px solid black; border-radius: 8px; padding: 10px; margin: 25px;"
+      href="https://jz2509.github.io/goit-fe-course/html-css/module-10/"
+      >Module 10</a
+    >
     </div>
   </body>
 </html>
