--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -38,11 +38,11 @@
     <section class="banner">
       <span class="banner__secondary">creative template</span>
       <span class="banner__primary">welcome to mogo</span>
-      <button class="banner__action">learn more</button>
+      <a class="banner__action" href="#services">learn more</a>
     </section>
     <main class="container">
       <!-- services -->
-      <section class="services">
+      <section class="services" id="services">
         <h3>We work with</h3>
         <h2>amazing services</h2>
         <ul class="service__list">
