--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -106,7 +106,7 @@
               <source
                 srcset="./img/portrait-1-min.png, ./img/retina/Layer16@2x-min.png 2x"
               />
-              <img srcset="" alt="default image" />
+              <img srcset="./img/portrait-1-min.png" alt="default image" />
             </picture>
             <div class="networks">
               <div class="buttons">
@@ -154,7 +154,7 @@
               <source
                 srcset="./img/portrait-2-min.png, ./img/retina/Layer19@2x-min.png 2x"
               />
-              <img srcset="" alt="default image" />
+              <img srcset="./img/portrait-2-min.png" alt="default image" />
             </picture>
             <div class="networks">
               <div class="buttons">
@@ -202,7 +202,7 @@
               <source
                 srcset="./img/portrait-1-min.png, ./img/retina/Layer18@2x-min.png 2x"
               />
-              <img srcset="" alt="default image" />
+              <img srcset="./img/portrait-1-min.png" alt="default image" />
             </picture>
             <div class="networks">
               <div class="buttons">
